tests/sealed_tvars/sealed_tvars.exp
Error -------------------------------------------------------------------------------------------- error_examples.js:4:7

Internal error: unconstrained tvar during tvar resolution

   4| class C { }
            ^


Error ------------------------------------------------------------------------------------------- error_examples.js:7:28

Internal error: unconstrained tvar during tvar resolution

   7| var x: number => number = (x) => x;
                                 ^



Found 2 errors
